# -Users-joshuawood-Desktop-Code-rusty_game_of_life_with_bevy

./: Cargo.toml  README.md  run_checks
src/: colours.rs  main.rs
