[package]
name = "rusty_game_of_life_with_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11"
rand = "0.8.5"
tokio = { version = "1.42", features = ["full"] }


[profile.dev]
opt-level = 1  # Slight optimization for faster builds
debug = true   # Keep debug symbols
lto = false    # Disable Link-Time Optimization for faster linking
codegen-units = 16  # Parallelize code generation
incremental = true  # Enable incremental compilation
